# swagger_server/controllers/revenue_controller.py
@@ -5,7 +5,7 @@ from swagger_server.models.revenue import Revenue  # noqa: E501
 from swagger_server.models.revenue_response import (
     RevenueResponse,
 )  # noqa: E501
-from swagger_server import util
+from swagger_server import db
 from swagger_server.models.error import Error
 from swagger_server.controllers.authorization_controller import (
     check_user_auth,
@@ -22,7 +22,7 @@ def api_vversion_revenues_customer_idpost(
 
     :param version: Version number
     :type version: str
-    :param customer_id: Customer&#x27;s ID
+    :param customer_id: Customer s ID
     :type customer_id: int
     :param body: Register revenue
     :type body: dict | bytes
@@ -54,7 +54,7 @@ def api_vversion_revenues_revenue_iddelete(version, revenue_id):  # noqa: E501
 
     :param version: Version number
     :type version: str
-    :param revenue_id: Revenue&#x27;s ID
+    :param revenue_id: Revenue s ID
     :type revenue_id: int
 
     :rtype: None
@@ -82,7 +82,7 @@ def api_vversion_revenues_revenue_idput(
 
     :param version: Version number
     :type version: str
-    :param revenue_id: Revenue&#x27;s ID
+    :param revenue_id: Revenue s ID
     :type revenue_id: int
     :param body: Update revenue
     :type body: dict | bytes
